--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.9.2
 pydantic-settings==2.6.1
 SQLAlchemy==2.0.36
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 python-jose[cryptography]==3.3.0
 cryptography==43.0.3
 paramiko==3.5.0
